[gd_scene load_steps=4 format=3 uid="uid://ce7tdjtym0s27"]

[ext_resource type="Script" uid="uid://choyko1di6wvc" path="res://menu.gd" id="1_5yleq"]
[ext_resource type="PackedScene" uid="uid://ciuhkq03lxe2v" path="res://StatsScreen.tscn" id="2_ylpcl"]

[sub_resource type="SystemFont" id="SystemFont_cx167"]
font_names = PackedStringArray("Fantasy")

[node name="Menu" type="Node2D"]
script = ExtResource("1_5yleq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1600.0
color = Color(0.176471, 0.176471, 0.176471, 0)
metadata/_edit_use_anchors_ = true

[node name="PlayerTurn" type="Control" parent="ColorRect"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Load" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.6
anchor_top = 2.2
anchor_right = 6.175
anchor_bottom = 4.225
offset_left = 376.0
offset_top = 824.0
offset_right = 441.0
offset_bottom = 855.0
text = "Load"
metadata/_edit_use_anchors_ = true

[node name="New" type="Button" parent="ColorRect/PlayerTurn"]
layout_mode = 1
anchors_preset = -1
anchor_left = -8.6
anchor_right = 6.0
anchor_bottom = 2.025
offset_left = 376.0
offset_top = 1040.0
offset_right = 448.0
offset_bottom = 1071.0
text = "New"
metadata/_edit_use_anchors_ = true

[node name="Loot" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.055
anchor_bottom = 0.08
offset_left = 16.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 472.0
color = Color(0.360784, 0.666667, 0.564706, 1)
metadata/_edit_use_anchors_ = true

[node name="WpnStats" type="RichTextLabel" parent="ColorRect/Loot"]
layout_mode = 0
offset_right = 688.0
offset_bottom = 448.0
theme_override_colors/default_color = Color(0, 0, 0.32549, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_cx167")
theme_override_font_sizes/normal_font_size = 104
text = "BASIC
Dungeon
Crawler"
vertical_alignment = 1

[node name="StatsScreen" parent="ColorRect" instance=ExtResource("2_ylpcl")]
position = Vector2(0, 640)

[connection signal="pressed" from="ColorRect/PlayerTurn/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="ColorRect/PlayerTurn/New" to="." method="_on_new_pressed"]
